fix header alignment

--- a/src/routes/navigation/navigation.styles.scss
+++ b/src/routes/navigation/navigation.styles.scss
@@ -12,7 +12,12 @@
         gap: 1rem;
         height: 100%;
         padding: 25px;
-        font-size: 1.5rem;
+        font-size: 2rem;
+        font-weight: 700;
+
+        span {
+            margin-top: 8px;
+        }
     }
 
     .nav-links-container {
